src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Owner_ID__c</fullName>
        <formula>Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>IF(Account.RecordTypeId =&apos;01250000000ULHg&apos;  , &apos;Channel Partner&apos;,IF(Account.RecordTypeId =&apos;01250000000ULHb&apos;  , &apos;End User&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authorized_Products__c</fullName>
        <label>Authorized Products</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger Meter - Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger Meter - Mag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Industrial - Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland Flo-Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racine Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rockwell Automation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <inlineHelpText>The source system that supplied Salesforce with this record.</inlineHelpText>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FourthShift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pivotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigMachines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Company_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Company Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Industrial_eNews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for a contact if record is to receive Industrial eNews distributions.</description>
        <inlineHelpText>Check this box if this Contact should receive Industrial eNews distributions.</inlineHelpText>
        <label>Industrial eNews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletter_opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prior_Days_Shipments_Report__c</fullName>
        <label>Prior Days Shipments Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reports_To_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Reports To External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <label>SIC Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Channel Partner</label>
        <referenceTo>Sales_Channel_Partner__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_eNews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for a contact if record is to receive Utility eNews distributions.</description>
        <inlineHelpText>Check this box if this Contact should receive Utility eNews distributions.</inlineHelpText>
        <label>Utility eNews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this Contact.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <validationRules>
        <fullName>Account_SalesChannelPartner</fullName>
        <active>false</active>
        <description>Require Account OR Sales Channel Partner fields to be populated.</description>
        <errorConditionFormula>AND(ISBLANK( Sales_Channel_Partner__c  ),ISBLANK(  Account.Name   ))</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>Please select a value for either Account Name OR Sales Channel Partner.</errorMessage>
    </validationRules>
</CustomObject>